[tool.poetry]
name = "podcast-knowledge"
version = "0.1.0"
description = "Podcast Knowledge Search"
authors = ["Codex Agent <codex-agent@localhost>"]
packages = [
    { include = "ingest" },
    { include = "search" },
    { include = "analytics" },
    { include = "infra" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
